monkey-c-formatter/tests/snapshots/snapshots__line_comment_trailing_whole_condition_moves_paren.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(r#\"\nfunction f() {\n    if (a || // c1\n        (b > 0 || c < -1) // c2\n        // c3\n        ) {\n        foo();\n    }\n}\n\"#.trim())"
---
function f() {
    if (a                     // c1
        || (b > 0 || c < -1)) // c2
    // c3
    {
        foo();
    }
}
