monkey-c-formatter/tests/snapshots/snapshots__me_keyword.snap
---
source: tests/snapshots.rs
expression: "format(\"class C { function f() { me.x = 1; } }\")"
---
class C {
    function f() {
        me.x = 1;
    }
}
