monkey-c-formatter/tests/snapshots/snapshots__member_chain_with_one_call_breaks_its_arguments.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format_width(\"function f() { var monthString = dateString.substring(yearpos + 1, dateString.length()); }\",\n60)"
---
function f() {
    var monthString = dateString.substring(
        yearpos + 1,
        dateString.length()
    );
}
