monkey-c-formatter/tests/snapshots/snapshots__method_symbol_calls.snap
---
source: tests/snapshots.rs
expression: "format(r#\"\nfunction f() {\n    var cb = method(:onReceive);\n    obj.method(:onTap);\n}\n\"#.trim())"
---
function f() {
    var cb = method(:onReceive);
    obj.method(:onTap);
}
