monkey-c-formatter/tests/snapshots/snapshots__module_with_var.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"module MyModule { var x; }\")"
---
module MyModule {
    var x;
}
